# InvstmentWarehouse

./: .editorconfig  .flake8  .gitignore  .secrets.baseline  CI.md  CLAUDE.md  JOURNAL.md  Makefile  README.md  TODO.md  alembic.ini  portfolio_manager_workout.md  pyproject.toml  pyproject.toml.bak  requirements.txt
.claude/: project.json
alembic/: env.py
configs/: development.toml
docs/: code_review_claude_2026-06-26.md  code_review_claude_2026-06-30.md  dev_contract_registry.md  dev_dashboard_implementation.md  messaging_protocol.md  messaging_protocol_implementation.md  pm_pivot_plan_implementation.md  pm_workout_implementation.md  portfolio_analyst_implementation.md  portfolio_manager_implementation.md  portfolio_optimization_implementation.md  qa_plan_implementation.md  qa_test_results_2026-06-30.md  report_writer_implementation.md  risk_api_contract.md  risk_api_implementation_plan.md  software_testing_implementation.md  synthetic_ips_implementation.md
scripts/: ci.sh
tests/: __init__.py  _tmp_secret_probe.txt  conftest.py  synth_stats_helpers.py  test_analyst_attribution.py  test_analyst_depth.py  test_analyst_npa.py  test_analyst_review.py  test_analyst_thesis.py  test_architecture.py  test_beliefs_update.py  test_black_litterman.py  test_ci_security.py  test_config.py  test_corporate_actions.py  test_dashboard.py  test_e2e_smoke.py  test_fiij_ingest.py  test_frozen.py  test_hnw_synthetic.py  test_infra_health.py  test_ips_policy_fields.py  test_ips_sleeves.py  test_lot_properties.py  test_messaging_coordinator.py  test_messaging_core.py  test_phase1.py  (+46 more)
(+275 files in other folders)
