[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invstment-warehouse"
version = "0.1.0"
description = "UHNW wealth platform — positions-first investment warehouse"
readme = "docs/research/sharpe_founding_engineer_brief.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "click>=8.1",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]
infra = [
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]

[project.scripts]
warehouse = "warehouse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["warehouse"]
